--- a/SmartKitty/SmartKitty/Base.lproj/Main.storyboard
+++ b/SmartKitty/SmartKitty/Base.lproj/Main.storyboard
@@ -505,7 +505,7 @@
         <!--Project InfoVC-->
         <scene sceneID="fXb-uI-lVG">
             <objects>
-                <viewController id="FZa-MA-gxW" customClass="ProjectInfoVC" customModule="SmartKitty" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProjectInfoVC" id="FZa-MA-gxW" customClass="ProjectInfoVC" customModule="SmartKitty" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1tN-Ut-V7S">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -516,7 +516,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OoK-Kb-xy2">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="1200"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vMD-o2-pxx">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vMD-o2-pxx">
                                                 <rect key="frame" x="20" y="20" width="374" height="33.5"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                                 <color key="textColor" name="DarkPrimary"/>
@@ -612,10 +612,10 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VuV-fF-UVR">
-                                                <rect key="frame" x="0.0" y="530.5" width="414" height="150"/>
+                                                <rect key="frame" x="0.0" y="520.5" width="414" height="120"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="150" id="y3v-M2-eUu"/>
+                                                    <constraint firstAttribute="height" constant="120" id="y3v-M2-eUu"/>
                                                 </constraints>
                                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="9RX-VR-yZq">
                                                     <size key="itemSize" width="128" height="128"/>
@@ -625,14 +625,14 @@
                                                 </collectionViewFlowLayout>
                                                 <cells>
                                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProjectStagesCell" id="ucb-Kc-dc7" customClass="ProjectStagesCell" customModule="SmartKitty" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="0.0" width="82" height="128"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="176" height="113"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="rDk-tv-iiy">
-                                                            <rect key="frame" x="0.0" y="0.0" width="82" height="128"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="176" height="113"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0x8-oV-1mj">
-                                                                    <rect key="frame" x="20" y="20" width="42" height="20.5"/>
+                                                                    <rect key="frame" x="20" y="20" width="136" height="20.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -655,14 +655,16 @@
                                                                     </subviews>
                                                                 </stackView>
                                                                 <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Mjn-VN-9Rq">
-                                                                    <rect key="frame" x="20" y="91" width="42" height="2"/>
+                                                                    <rect key="frame" x="20" y="91" width="136" height="2"/>
                                                                 </progressView>
                                                             </subviews>
                                                             <constraints>
                                                                 <constraint firstItem="Mjn-VN-9Rq" firstAttribute="top" secondItem="IEk-Bt-c8W" secondAttribute="bottom" constant="20" id="4dX-4N-lFg"/>
                                                                 <constraint firstItem="IEk-Bt-c8W" firstAttribute="top" secondItem="0x8-oV-1mj" secondAttribute="bottom" constant="10" id="LVZ-QE-9uR"/>
                                                                 <constraint firstAttribute="trailing" secondItem="0x8-oV-1mj" secondAttribute="trailing" constant="20" id="O4P-nz-gIv"/>
+                                                                <constraint firstAttribute="bottom" secondItem="Mjn-VN-9Rq" secondAttribute="bottom" constant="20" id="b1W-qD-HPe"/>
                                                                 <constraint firstItem="Mjn-VN-9Rq" firstAttribute="leading" secondItem="rDk-tv-iiy" secondAttribute="leading" constant="20" id="c8h-4R-8pQ"/>
+                                                                <constraint firstAttribute="trailing" secondItem="IEk-Bt-c8W" secondAttribute="trailing" constant="20" id="cXc-LY-tg5"/>
                                                                 <constraint firstItem="IEk-Bt-c8W" firstAttribute="leading" secondItem="rDk-tv-iiy" secondAttribute="leading" constant="20" id="er3-t9-Ab4"/>
                                                                 <constraint firstAttribute="trailing" secondItem="Mjn-VN-9Rq" secondAttribute="trailing" constant="20" id="pPF-D8-JQY"/>
                                                                 <constraint firstItem="0x8-oV-1mj" firstAttribute="top" secondItem="rDk-tv-iiy" secondAttribute="top" constant="20" id="vaG-bk-UWw"/>
@@ -678,13 +680,13 @@
                                                 </cells>
                                             </collectionView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Documents" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Puf-cO-haf">
-                                                <rect key="frame" x="20" y="720.5" width="374" height="26.5"/>
+                                                <rect key="frame" x="20" y="680.5" width="374" height="26.5"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                 <color key="textColor" name="DarkPrimary"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pow-Ca-Zru">
-                                                <rect key="frame" x="0.0" y="787" width="414" height="200"/>
+                                                <rect key="frame" x="0.0" y="747" width="414" height="200"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="200" id="zNl-PI-Fzc"/>
@@ -709,7 +711,7 @@
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
-                                            <constraint firstItem="VuV-fF-UVR" firstAttribute="top" secondItem="Vr0-JL-Koa" secondAttribute="bottom" constant="40" id="6xA-Ci-nU3"/>
+                                            <constraint firstItem="VuV-fF-UVR" firstAttribute="top" secondItem="Vr0-JL-Koa" secondAttribute="bottom" constant="30" id="6xA-Ci-nU3"/>
                                             <constraint firstAttribute="trailing" secondItem="OP5-8C-wsl" secondAttribute="trailing" constant="20" id="7SI-fd-4Ko"/>
                                             <constraint firstItem="OP5-8C-wsl" firstAttribute="top" secondItem="sYq-Uw-oxJ" secondAttribute="bottom" constant="35.5" id="9Kp-RF-KK5"/>
                                             <constraint firstItem="sYq-Uw-oxJ" firstAttribute="leading" secondItem="OoK-Kb-xy2" secondAttribute="leading" constant="20" id="AIz-9Z-9Pu"/>
