--- a/SmartKitty/SmartKitty/Base.lproj/Main.storyboard
+++ b/SmartKitty/SmartKitty/Base.lproj/Main.storyboard
@@ -686,10 +686,10 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pow-Ca-Zru">
-                                                <rect key="frame" x="0.0" y="747" width="414" height="200"/>
+                                                <rect key="frame" x="0.0" y="737" width="414" height="170"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="200" id="zNl-PI-Fzc"/>
+                                                    <constraint firstAttribute="height" constant="170" id="zNl-PI-Fzc"/>
                                                 </constraints>
                                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3ih-Cz-F2w">
                                                     <size key="itemSize" width="128" height="128"/>
@@ -698,59 +698,54 @@
                                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                 </collectionViewFlowLayout>
                                                 <cells>
-                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="MlH-Nk-n5g" customClass="ProjectDocumentsCell" customModule="SmartKitty" customModuleProvider="target">
-                                                        <rect key="frame" x="58" y="0.0" width="298" height="121.5"/>
+                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProjectDocumentsCell" id="MlH-Nk-n5g" customClass="ProjectDocumentsCell" customModule="SmartKitty" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="198" height="128"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="dcI-4H-ziK">
-                                                            <rect key="frame" x="0.0" y="0.0" width="298" height="121.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="198" height="128"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
-                                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gSn-D7-Lec">
-                                                                    <rect key="frame" x="20" y="20" width="258" height="81.5"/>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="doc.text.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="DyL-tp-Dvo">
+                                                                    <rect key="frame" x="20" y="-3" width="158" height="76.5"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="70" id="B88-wF-22o"/>
+                                                                    </constraints>
+                                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="25" scale="large" weight="ultraLight"/>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wZ-aQ-36W">
+                                                                    <rect key="frame" x="10" y="75" width="178" height="18"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="JBf-Kp-iA3">
+                                                                    <rect key="frame" x="10" y="98" width="178" height="20.5"/>
                                                                     <subviews>
-                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="doc.text.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="DyL-tp-Dvo">
-                                                                            <rect key="frame" x="0.0" y="-3" width="80" height="88"/>
-                                                                            <constraints>
-                                                                                <constraint firstAttribute="width" constant="80" id="iIi-2X-SxJ"/>
-                                                                            </constraints>
-                                                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="25" scale="large" weight="ultraLight"/>
-                                                                        </imageView>
-                                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="jVJ-s3-ZNw">
-                                                                            <rect key="frame" x="80" y="0.0" width="178" height="81.5"/>
-                                                                            <subviews>
-                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wZ-aQ-36W">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="178" height="61"/>
-                                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                                    <nil key="textColor"/>
-                                                                                    <nil key="highlightedColor"/>
-                                                                                </label>
-                                                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="JBf-Kp-iA3">
-                                                                                    <rect key="frame" x="0.0" y="61" width="178" height="20.5"/>
-                                                                                    <subviews>
-                                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Word count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sAM-Am-K3o">
-                                                                                            <rect key="frame" x="0.0" y="0.0" width="89" height="20.5"/>
-                                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                                            <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-                                                                                            <nil key="highlightedColor"/>
-                                                                                        </label>
-                                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YTZ-QX-WfM">
-                                                                                            <rect key="frame" x="89" y="0.0" width="89" height="20.5"/>
-                                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                                            <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-                                                                                            <nil key="highlightedColor"/>
-                                                                                        </label>
-                                                                                    </subviews>
-                                                                                </stackView>
-                                                                            </subviews>
-                                                                        </stackView>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Word count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sAM-Am-K3o">
+                                                                            <rect key="frame" x="0.0" y="0.0" width="89" height="20.5"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YTZ-QX-WfM">
+                                                                            <rect key="frame" x="89" y="0.0" width="89" height="20.5"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
                                                                     </subviews>
                                                                 </stackView>
                                                             </subviews>
                                                             <constraints>
-                                                                <constraint firstAttribute="bottom" secondItem="gSn-D7-Lec" secondAttribute="bottom" constant="20" id="SJG-nq-0aF"/>
-                                                                <constraint firstItem="gSn-D7-Lec" firstAttribute="leading" secondItem="dcI-4H-ziK" secondAttribute="leading" constant="20" id="VJC-wg-ryK"/>
-                                                                <constraint firstItem="gSn-D7-Lec" firstAttribute="top" secondItem="dcI-4H-ziK" secondAttribute="top" constant="20" id="fNL-vJ-XiB"/>
-                                                                <constraint firstAttribute="trailing" secondItem="gSn-D7-Lec" secondAttribute="trailing" constant="20" id="lrk-lo-zF9"/>
+                                                                <constraint firstItem="4wZ-aQ-36W" firstAttribute="top" secondItem="DyL-tp-Dvo" secondAttribute="bottom" constant="5" id="A3S-tc-vkD"/>
+                                                                <constraint firstAttribute="trailing" secondItem="4wZ-aQ-36W" secondAttribute="trailing" constant="10" id="AhP-pi-4aJ"/>
+                                                                <constraint firstItem="JBf-Kp-iA3" firstAttribute="leading" secondItem="dcI-4H-ziK" secondAttribute="leading" constant="10" id="KUV-uB-41A"/>
+                                                                <constraint firstItem="4wZ-aQ-36W" firstAttribute="leading" secondItem="dcI-4H-ziK" secondAttribute="leading" constant="10" id="N5W-TS-xk2"/>
+                                                                <constraint firstItem="JBf-Kp-iA3" firstAttribute="top" secondItem="4wZ-aQ-36W" secondAttribute="bottom" constant="5" id="Tnc-lE-QSX"/>
+                                                                <constraint firstAttribute="trailing" secondItem="JBf-Kp-iA3" secondAttribute="trailing" constant="10" id="V0f-M6-xJp"/>
+                                                                <constraint firstItem="DyL-tp-Dvo" firstAttribute="leading" secondItem="dcI-4H-ziK" secondAttribute="leading" constant="20" id="n1u-W0-Koq"/>
+                                                                <constraint firstItem="DyL-tp-Dvo" firstAttribute="top" secondItem="dcI-4H-ziK" secondAttribute="top" id="o6E-Qo-GtC"/>
+                                                                <constraint firstAttribute="trailing" secondItem="DyL-tp-Dvo" secondAttribute="trailing" constant="20" id="pe8-wF-7Ql"/>
                                                             </constraints>
                                                         </collectionViewCellContentView>
                                                         <connections>
@@ -783,7 +778,7 @@
                                             <constraint firstItem="vMD-o2-pxx" firstAttribute="leading" secondItem="OoK-Kb-xy2" secondAttribute="leading" constant="20" id="aN7-fa-lxc"/>
                                             <constraint firstItem="Vr0-JL-Koa" firstAttribute="top" secondItem="Vqp-re-U4a" secondAttribute="bottom" constant="40" id="bVK-ZV-PuR"/>
                                             <constraint firstAttribute="trailing" secondItem="VuV-fF-UVR" secondAttribute="trailing" id="eFb-Ln-ucQ"/>
-                                            <constraint firstItem="pow-Ca-Zru" firstAttribute="top" secondItem="Puf-cO-haf" secondAttribute="bottom" constant="40" id="ehO-U5-BbC"/>
+                                            <constraint firstItem="pow-Ca-Zru" firstAttribute="top" secondItem="Puf-cO-haf" secondAttribute="bottom" constant="30" id="ehO-U5-BbC"/>
                                             <constraint firstItem="vMD-o2-pxx" firstAttribute="top" secondItem="OoK-Kb-xy2" secondAttribute="top" constant="20" id="h7a-WE-25b"/>
                                             <constraint firstItem="uFD-Oa-vrY" firstAttribute="top" secondItem="pun-8x-mtv" secondAttribute="bottom" constant="46.5" id="izw-25-Wxa"/>
                                             <constraint firstItem="pow-Ca-Zru" firstAttribute="leading" secondItem="OoK-Kb-xy2" secondAttribute="leading" id="kN2-yP-KfH"/>
